<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="change_header_color">Change header color</string>
    <string name="contact_saved">Contact saved</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="sms_permission_required">SMS permission is required to send messages</string>
    <string name="choose_photo">Choose photo</string>
    <string name="change_language">Change language</string>
    <string name="backgrounded_at">App was backgrounded at %1$s</string>
</resources>
